--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=${PORT:8080}
 currency=RUB
 openexchangeUrl=https://openexchangerates.org/api/historical/
 openexchangekey=b1ea6062f299461cb8d86cf87d3ab4ec
